fix: remove page padding on mobile view

--- a/src/styles/header.module.scss
+++ b/src/styles/header.module.scss
@@ -27,7 +27,7 @@ $screenHeight: calc(100vh - 96px);
 
       @media only screen and (max-width: 768px) {
         padding:10%;
-        width: 60%;
+        width: 75%;
       }
 
       .text {
